--- a/ChIPseq.rmd
+++ b/ChIPseq.rmd
@@ -65,42 +65,12 @@ done
 
 ## Align ChIPseq libraries to zebrafish genome, index, and remove duplicates
 ```{bash}
+mkdir /gpfs0/scratch/junkdir1337/
 sbatch sbatchCmds/align_chip.sh
+rm -r /gpfs0/scratch/junkdir1337
 ```
 
 ## call peaks
 ```{bash}
-echo $HOSTNAME $SLURM_ARRAY_TASK_ID
-
-module purge
-module load GCC/7.3.0-2.30 \
-            OpenMPI/3.1.1 \
-            MACS2/2.2.5-Python-3.6.6
-
-fileArray=(JPK0028
-           JPK0030
-           JPK0032
-           JPK0034
-           JPK0036
-           JPK0038
-           JPK0040
-           JPK0042)
-           
-controlArray=(JPK0029
-              JPK0031
-              JPK0033
-              JPK0035
-              JPK0037
-              JPK0039
-              JPK0041
-              JPK0043)
-
-macs2 callpeak \
-  -t /home/gdkendalllab/lab/analyses/rsjxk002/P3F_ChIP_6hpf/align_nosplice/${fileArray[${SLURM_ARRAY_TASK_ID}]}_dedupd.bam \
-  -c /home/gdkendalllab/lab/analyses/rsjxk002/P3F_ChIP_6hpf/align_nosplice/${controlArray[${SLURM_ARRAY_TASK_ID}]}_dedupd.bam \
-  -n ${fileArray[${SLURM_ARRAY_TASK_ID}]} \
-  -f BAMPE \
-  -B \
-  -g 1679203469 \
-  --keep-dup all
+sbatch sbatchCmds/macs2peaks.sh
 ```
